data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2155.wast
;; 6. **Test Loop Skipping Continuously**: Utilize a `br_if` with a condition that never resolves true due to an error in operand stack manipulation, ensuring one implementation skips endlessly.

(assert_invalid
  (module (func $loop_scenario (param i32) (result i32)
    (block (result i32) 
      (loop 
        (br_if 0 (i32.eqz (get_local 0))) 
        (br 1)
      )
      (i32.const 1)
    )
  ))
  "type mismatch"
)